--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+    <title>Welcome to Flou.ai</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Welcome to Flou.ai</h1>
+    <p>For startups striving to make their mark,<br>
+    We guide your LLMs, igniting a spark.<br>
+    Orchestrate with ease, in an elegant way,<br>
+    Boosting performance, clear as day.<br>
+    No need to reinvent, no tools to make,<br>
+    We’ve got the framework, for your success’ sake.</p>
+    <p>We don't have a branding,<br>
+    but we have a cool name,<br>
+    Sorry if you are using Langchain.</p>
+    <p>If you seek to ride the AI wave and thrive,<br>
+    Be an early adopter, stay ahead and alive.<br>
+    Click the link below, don't miss your chance,<br>
+    Join us in this quest, advance and enhance</p>
+    <p><a href="https://tally.so/r/n91EY4" target="_blank">Join Us</a></p>
+    <p>PD: This has not been orchestrated by Flou.ai<br>
+    It has been a merely prompt to OpenAI</p>
 </body>
 </html>
